<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/preference_header">

        <ListPreference
            android:defaultValue="@string/default_language"
            app:entries="@array/language_list"
            app:entryValues="@array/language_values"
            app:key="pLanguage"
            app:title="@string/language"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:defaultValue="@string/default_adjust_no_of_days"
            android:entries="@array/adjust_no_of_days_list"
            android:entryValues="@array/adjust_no_of_days_list"
            android:key="pAdjustedNoOfDays"
            android:title="@string/adjusted_no_of_days"
            android:summary="@string/no_adjust_no_of_days_summary" />

        <com.marwahtechsolutions.hijriwidget.preference.TimePreference
            android:defaultValue="@string/default_maghrib_time"
            android:key="pMagribTime"
            android:title="@string/maghrib_time" />

    </PreferenceCategory>

</PreferenceScreen>